--- a/MusicLibaryApp/MusicLibaryApp.csproj
+++ b/MusicLibaryApp/MusicLibaryApp.csproj
@@ -119,12 +119,16 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AddMusicPage.xaml.cs">
+      <DependentUpon>AddMusicPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MusicDetailpage.xaml.cs">
       <DependentUpon>MusicDetailpage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MusicEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestPage.xaml.cs">
       <DependentUpon>TestPage.xaml</DependentUpon>
@@ -137,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\onesong.mp3" />
+    <Content Include="Assets\Test.mp3" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -151,6 +156,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="AddMusicPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MusicDetailpage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
